--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,7 @@ body {
 .main {
   display: flex;
   flex-direction: row-reverse;
-  width: 1200px;
+  /* width: 1200px; */
   margin: 0 auto auto;
 
   @media screen and (min-width: 320px) {
