--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,176 +2,15 @@ body {
   font-family: "Montserrat", sans-serif;
   background: #f5f7fa;
   box-sizing: border-box;
+  width: 1200px;
+  margin: 0px;
 }
 
-/* ------------------------MAIN--------------------------- */
-.main {
+.container {
   display: flex;
-  flex-direction: row-reverse;
-  /* width: 1200px; */
-  margin: 0 auto auto;
-
-  @media screen and (min-width: 320px) {
-    max-width: 480px;
-  }
-  @media screen and (min-width: 768px) {
-    max-width: 768px;
-  }
-  @media screen and (min-width: 120px) {
-    max-width: 1200px;
-  }
-}
-
-.main-wrap {
-  position: relative;
-}
-
-.main_content {
-  background: #ffffff;
-  box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
-  padding: 65px 80px;
-  margin-top: 50px; /*Додаткові відступи зверху*/
-  margin-bottom: 25px; /*Додаткові відступи знизу*/
-}
-
-.user-wrap {
-  position: absolute;
-  left: 0;
+  justify-content: start;
   width: 100%;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #f5ed09;
-}
-
-.about_name {
-  margin-left: 90px;
-  margin-bottom: 10px;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 45px;
-  line-height: 55px;
-  color: #000000;
-}
-
-.about_position {
-  margin-left: 90px;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 17px;
-  color: #000000;
-  margin-bottom: 20px;
-}
-
-/*---------------------------ABOUT---------------------*/
-
-.about {
-  margin-top: 230px;
-  margin-bottom: 40px;
-}
-
-.about_description {
-  margin-top: 10px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 15px;
-  line-height: 24px;
-  color: #595959;
-  width: 400px; /*задати ширину блоку*/
-  text-align: justify; /*розтягнути текст на весь блок*/
-}
-
-.project,
-.project_link {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  color: #595959;
-  text-decoration: none;
-}
-
-.project_link {
-  margin-left: 10px;
-}
-
-.projects_item,
-.project_bracket {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 24px;
-  color: #000000;
-}
-
-.projects {
-  margin-bottom: 50px;
-}
-
-/*-------------------WORK---------------------*/
-
-.work_position,
-.faculty {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 20px;
-  color: #000000;
-  margin-bottom: 10px;
-}
-
-.organizzation,
-.university {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 20px;
-  color: #dccd21;
-}
-
-.work_list {
-  padding: 0;
-  margin-left: 15px;
-  width: 600px; /*задати ширину блоку*/
-  text-align: justify; /*розтягнути текст на ширину блоку*/
-}
-
-.work_list_item {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  color: #595959;
-}
-
-.period {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 15px;
-  color: #a8a8a8;
-  margin-bottom: 10px;
-}
-
-.line {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 15px;
-  color: #000000;
-}
-.university {
-  margin-top: 0%;
-  margin-bottom: 10px;
-}
-
-.faculty {
-  margin-top: 0%;
-  margin-bottom: 12px;
-}
-
-.education {
-  margin-top: 48px;
+  margin: 0 auto;
 }
 
 /*----------------SIDEBAR-------------*/
@@ -185,7 +24,7 @@ body {
   margin-bottom: 25px; /*Додаткові відступи знизу*/
 }
 
-.container {
+.sidebar-container {
   margin-left: 60px;
   margin-right: 60px;
 }
@@ -336,7 +175,92 @@ body {
   fill: currentColor;
 }
 
-/* ---------------------------------------------- */
+/* ------------------------MAIN--------------------------- */
+
+.main-wrap {
+  position: relative;
+}
+
+.main_content {
+  background: #ffffff;
+  box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
+  padding: 65px 80px;
+  margin-top: 50px; /*Додаткові відступи зверху*/
+  margin-bottom: 25px; /*Додаткові відступи знизу*/
+}
+
+.user-wrap {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #f5ed09;
+}
+
+.about_name {
+  margin-left: 90px;
+  margin-bottom: 10px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 55px;
+  color: #000000;
+}
+
+.about_position {
+  margin-left: 90px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 17px;
+  color: #000000;
+  margin-bottom: 20px;
+}
+
+.about {
+  margin-top: 230px;
+  margin-bottom: 40px;
+}
+
+.about_description {
+  margin-top: 10px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  color: #595959;
+  width: 400px; /*задати ширину блоку*/
+  text-align: justify; /*розтягнути текст на весь блок*/
+}
+
+.project,
+.project_link {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  color: #595959;
+  text-decoration: none;
+}
+
+.project_link {
+  margin-left: 10px;
+}
+
+.projects_item,
+.project_bracket {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+  color: #000000;
+}
+
+.projects {
+  margin-bottom: 50px;
+}
+
 .title {
   font-style: normal;
   font-weight: 700;
@@ -350,3 +274,69 @@ body {
   padding: 0%;
   margin-left: 15px;
 }
+
+.work_position,
+.faculty {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
+  margin-bottom: 10px;
+}
+
+.organizzation,
+.university {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #dccd21;
+}
+
+.work_list {
+  padding: 0;
+  margin-left: 15px;
+  width: 600px; /*задати ширину блоку*/
+  text-align: justify; /*розтягнути текст на ширину блоку*/
+}
+
+.work_list_item {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  color: #595959;
+}
+
+.period {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #a8a8a8;
+  margin-bottom: 10px;
+}
+
+.line {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #000000;
+}
+.university {
+  margin-top: 0%;
+  margin-bottom: 10px;
+}
+
+.faculty {
+  margin-top: 0%;
+  margin-bottom: 12px;
+}
+
+.education {
+  margin-top: 48px;
+}
+
+/* ---------------------------------------------- */
