--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,12 +3,12 @@ body {
   background: #f5f7fa;
   box-sizing: border-box;
   width: 1200px;
-  margin: 0px;
+  margin: 0px auto;
 }
 
 .container {
   display: flex;
-  justify-content: start;
+  justify-content: center;
   width: 100%;
   margin: 0 auto;
 }
